Add hobby pages

--- a/index.html
+++ b/index.html
@@ -7,13 +7,40 @@
     <title>My First Page</title>
 </head>
 <body>
-    <h2>Hello World!</h2>
-    <h2>My name is Aleksei</h2>
-        
-    <!--This is a commentary-->
-    <!--lets add an image-->
-    <img src="img/01bfbbdc5b4e5f8806d30bfeda7b5a08.jpg">
 
-    <p>Aleksei Manohhin, &#169 2020 </p>
+    <table border="4">
+        <tr>
+            <!--td -table data-->
+            <td><img src="img/dmc5.png" style="width: 500px"/></td>
+            <td>
+                <h1>Aleksei Manohhin</h1>
+                <p>Awesome web developer</p>
+                <p>I &#9829 pizza, JavaScript</p>
+
+
+            </td>
+        </tr>
+    </table>
+
+
+    <h3>My favorite IT Subjects: </h3>
+    <Ul>
+        <!--li list item-->
+        <li>Web Development</li>
+        <li>Android Development</li>
+        <li> &#129313 Shkarbanova Development &#129313 </li>
+    </Ul>
+
+
+    <h3>hobbies</h3>
+    <ol>
+        <li><a href="gaming.html" target="blank">Gaming</a></li>
+        <li><a href="farming.html" target="blank">Farming</a></li>
+        <li><a href="zadroting.html" target="blank">Zadroting</a></li>
+    </ol>
+
+
+    
+
 </body>
 </html>
